# paw

./: Cargo.toml  README.md  push.sh  test.txt
crates/buffer/: Cargo.toml
crates/buffer/src/: buffer.rs  errors.rs  lib.rs
crates/buffer/tests/: buffer.rs
crates/editor/: Cargo.toml
crates/editor/src/: cursor.rs  editor.rs  errors.rs  lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  ui.rs
crates/utils/src/: lib.rs  position.rs  range.rs
src/: main.rs
