[package]
name = "paw"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/buffer",
    "crates/editor",
    "crates/tui", 
    "crates/utils"
]
resolver = "2" 

[dependencies]
anyhow = "1.0.98"
crossterm = "0.29.0"
editor = { path = "crates/editor" }
ratatui = "0.29.0"
tui = { path = "crates/tui" }
